tests/regression/errors/basic/syntax_error_15.csd
// Syntax error test 15 - missing semicolon
sus x drip = 15
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
